--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,13 @@
   }
 }
 
+@media screen and (min-width: 900px){
+  .mobile {
+    display: none;
+    visibility: hidden;
+  }
+}
+
 @keyframes spin {
   from {
     transform: rotate(0deg);
@@ -87,6 +94,13 @@
   }
   to {
     opacity: 100%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .mobile {
+    visibility: visible;
+    display: block;
   }
 }
 
@@ -196,7 +210,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 10;
   scale: 70%;
 }
 
@@ -250,4 +264,20 @@ body {
 
 .photos img:hover {
   scale: 115%;
+}
+
+.mobile {
+  height: 100%;
+  width: 100%;
+  background-color: #FFF5EA;
+  font-size: 1.5em;
+  color: #968C83;
+  z-index: 100;
+  position: absolute;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
 }
